--- a/AI_Resume_Builder/Frontend-Namira(C231450)/ai-resume-builder/package.json
+++ b/AI_Resume_Builder/Frontend-Namira(C231450)/ai-resume-builder/package.json
@@ -11,16 +11,29 @@
   },
   "dependencies": {
     "@clerk/clerk-react": "^5.24.2",
+    "@google/genai": "^1.5.1",
+    "@google/generative-ai": "^0.24.1",
+    "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-dialog": "^1.1.6",
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
+    "@radix-ui/react-popover": "^1.1.14",
     "@radix-ui/react-slot": "^1.1.2",
+    "@smastrom/react-rating": "^1.5.0",
+    "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.479.0",
+    "mime": "^4.0.7",
+    "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.3.0",
+    "react-simple-wysiwyg": "^3.2.2",
+    "react-web-share": "^2.0.2",
+    "sonner": "^2.0.3",
     "tailwind-merge": "^3.0.2",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
